# Breakout

./: .gitignore  CMakeLists.txt  Dockerfile  Readme
include/: game.h
src/: game.cpp  main.cpp
web/: index.html
